Fixed white spaces and add navbar hover effect

--- a/styles.css
+++ b/styles.css
@@ -63,15 +63,34 @@ header .dark-overlay {
   text-decoration: none;
   color: var(--white);
   margin: 0 10px;
-  padding: 5px;
+  padding: 5px 0 10px 0;
+  position: relative;
+}
+
+.nav-bar ul li a::after {
+  content: "";
+  width: 40%;
+  height: 2px;
+  background: var(--white);
+  position: absolute;
+  left: 30%;
+  transform: scaleX(0);
+  transform-origin: center;
+  bottom: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.nav-bar ul li a:hover::after {
+  transform: scaleX(1);
 }
 
 header .hero-text {
   position: relative;
+  top: 10px;
   display: inline-block;
   text-transform: uppercase;
   font-weight: 300;
-  padding: 30px 73px 20px 25px;
+  padding: 30px 60px 20px 25px;
   font-family: "Josefin Sans", sans-serif;
   font-size: 5rem;
   margin-left: 7.5rem;
@@ -141,7 +160,7 @@ header .hero-text {
   border: 2px solid var(--black);
   background: var(--white);
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.7s ease-in-out;
   outline: none;
 }
 
@@ -153,7 +172,6 @@ header .hero-text {
 .grid-items .grid-images {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
   grid-gap: 1.5rem;
 }
 
@@ -173,7 +191,7 @@ header .hero-text {
 }
 
 .img-gallery:hover::after {
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.7);
   transition: all 0.4s ease-in-out;
   box-shadow: none;
 }
